crates/functions/src/tests/regexp/snapshots/regexp_replace/query_regexp_replace_second_occurrence_not_forward.snap
---
source: crates/functions/src/tests/regexp/regexp_replace.rs
description: "\"SELECT REGEXP_REPLACE('It was the best of times, it was the worst of times. times',\n                      'times',\n                      'days',\n                      1,\n                      2)\""
---
Ok(
    [
        "+---------------------------------------------------------------------------------------------------------------------------------+",
        "| regexp_replace(Utf8(\"It was the best of times, it was the worst of times. times\"),Utf8(\"times\"),Utf8(\"days\"),Int64(1),Int64(2)) |",
        "+---------------------------------------------------------------------------------------------------------------------------------+",
        "| It was the best of times, it was the worst of days. times                                                                       |",
        "+---------------------------------------------------------------------------------------------------------------------------------+",
    ],
)
