crates/functions/src/tests/regexp/snapshots/regexp_replace/query_regexp_replace_second_occurrence_not_forward_with_position.snap
---
source: crates/functions/src/tests/regexp/regexp_replace.rs
description: "\"SELECT REGEXP_REPLACE('It was the best of times, it was the worst of times. times',\n                      'times',\n                      'days',\n                      30,\n                      2) AS result;\""
---
Ok(
    [
        "+-----------------------------------------------------------+",
        "| result                                                    |",
        "+-----------------------------------------------------------+",
        "| It was the best of times, it was the worst of times. days |",
        "+-----------------------------------------------------------+",
    ],
)
